<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="tkhshyt.annicta.work_info.WorkInfoItemViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/item_work_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/twitterIcon"
                style="@style/ImageIcon72dpStyle"
                bind:centerCrop="@{true}"
                bind:placeholder="@{@drawable/ic_account_circle}"
                bind:imageUrl="@{viewModel.work.images.twitter.original_avatar_url ?? ``}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/workTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@{viewModel.work.title}"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/twitterIcon" />

            <TextView
                android:id="@+id/watcherCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.work.watchers_count.toString}"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/twitterIcon"
                app:layout_constraintTop_toBottomOf="@+id/workTitle" />

            <TextView
                android:id="@+id/watchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/watchers"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/watcherCount"
                app:layout_constraintTop_toTopOf="@+id/watcherCount" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mediaText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="right"
                android:text="@string/media"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/seasonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/badge_media"
                android:padding="3dp"
                android:text="@{viewModel.work.media_text}"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toEndOf="@+id/releaseSeasonText"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/releaseSeasonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/release_season"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mediaText" />

            <TextView
                android:id="@+id/seasonName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.work.season_name_text}"
                android:textColor="@color/light_blue_800"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/releaseSeasonText"
                app:layout_constraintTop_toBottomOf="@+id/media" />

            <TextView
                android:id="@+id/releasedOnText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="right"
                android:text="@string/released_on"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/releaseSeasonText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/releaseSeasonText"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/releasedOn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.work.released_on}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/seasonName"
                app:layout_constraintTop_toBottomOf="@+id/seasonName" />

            <TextView
                android:id="@+id/statusText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:gravity="right"
                android:text="@string/status"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/releasedOnText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/releasedOnText"
                tools:ignore="RtlHardcoded" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/statusSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/status_spinner_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/releasedOn"
                app:layout_constraintTop_toBottomOf="@+id/releasedOn" />

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/twitterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/twitter_color_button"
            android:text="@string/official_twitter"
            android:textAllCaps="false"
            android:onClick="@{viewModel.openTwitter}"
            android:visibility="@{viewModel.work.twitter_username.isEmpty ? View.GONE : View.VISIBLE}"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/twitterHashtagButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/twitter_color_button"
            android:text="@{viewModel.work.twitter_hashtag}"
            android:visibility="@{viewModel.work.twitter_hashtag.isEmpty ? View.GONE : View.VISIBLE}"
            android:textAllCaps="false"
            android:onClick="@{viewModel.openTwitterHashtag}"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/wikipediaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/wikipedia_button"
            android:text="@string/wikipedia"
            android:onClick="@{viewModel.openWikipedia}"
            android:visibility="@{viewModel.work.wikipedia_url.isEmpty ? View.GONE : View.VISIBLE}"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/myAnimeListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/mal_color_button"
            android:text="@string/my_anime_list"
            android:textAllCaps="false"
            android:onClick="@{viewModel.openMyAnimeList}"
            android:visibility="@{viewModel.work.mal_anime_id.isEmpty ? View.GONE : View.VISIBLE}"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/episodeCountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:text="@string/episode_count"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/episodeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.work.episodes_count.toString}"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</layout>